defaultTasks 'build'

subprojects {
    apply plugin: 'java-library'

    group = 'biz.donvi'
    project.version = '0.14.9'

    sourceCompatibility = 21
    targetCompatibility = 21

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'

    }

    repositories {
        mavenLocal()
        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    }

    tasks.withType(Copy).all {
        duplicatesStrategy 'include'
    }
}
